@@ -343,9 +343,9 @@ If any array overflows, please report to tex-k@tug.org.
 /*====================================================================*/
 
 #if USE_KPATHSEA
-#define VERSION       "version 2.15 [TeX Live " TEX_LIVE_VERSION "] (kpathsea + Thai support)"
+#define VERSION       "version 2.16 [TeX Live " TEX_LIVE_VERSION "] (kpathsea + Thai support)"
 #else
-#define VERSION       "version 2.15 [20-Nov-2007] (with Thai support)"
+#define VERSION       "version 2.16 [19-Sep-2021] (with Thai support)"
 #endif
 
 #define PUT_VERSION { \
@@ -428,6 +428,7 @@ extern char idx_escape;
 
 extern char page_comp[ARRAY_MAX];
 extern int page_offset[PAGETYPE_MAX];
+extern char page_prec[ARRAY_MAX];
 
 extern char preamble[ARRAY_MAX];
 extern char postamble[ARRAY_MAX];
