@@ -7,7 +7,7 @@
 TEXMFCNF=$srcdir/../kpathsea
 export TEXMFCNF
 
-rm -f sample.*
+rm -f sample.* range*.* pprec*.*
 
 ./makeindex $srcdir/tests/sample.idx -o sample.ind1 -t sample.ilg1 \
 	&& diff $srcdir/tests/sample.ind sample.ind1 || exit 1
@@ -15,3 +15,36 @@ rm -f sample.*
 cat $srcdir/tests/sample.idx | ./makeindex >sample.ind2 2>sample.ilg2 \
 	&& diff $srcdir/tests/sample.ind sample.ind2 || exit 1
 
+# test for range suffix_2p, suffix_3p, suffix_mp
+./makeindex -s $srcdir/tests/range1.ist $srcdir/tests/range.idx \
+	-o range1.ind1 -t range1.ilg \
+	&& diff $srcdir/tests/range1.ind range1.ind1 || exit 1
+
+./makeindex -s $srcdir/tests/range2.ist $srcdir/tests/range.idx \
+	-o range2.ind1 -t range2.ilg \
+	&& diff $srcdir/tests/range2.ind range2.ind1 || exit 1
+
+./makeindex -s $srcdir/tests/range3.ist $srcdir/tests/range.idx \
+	-o range3.ind1 -t range3.ilg \
+	&& diff $srcdir/tests/range3.ind range3.ind1 || exit 1
+
+# test for page_precedence and suffix_3p
+./makeindex -s $srcdir/tests/pprec0.ist $srcdir/tests/pprecA.idx \
+	-o pprecA-0.ind1 -t pprecA-0.ilg \
+	&& diff $srcdir/tests/pprecA-0.ind pprecA-0.ind1 || exit 1
+
+./makeindex -s $srcdir/tests/pprec1.ist $srcdir/tests/pprecA.idx \
+	-o pprecA-1.ind1 -t pprecA-1.ilg \
+	&& diff $srcdir/tests/pprecA-1.ind pprecA-1.ind1 || exit 1
+
+./makeindex -s $srcdir/tests/pprec2.ist $srcdir/tests/pprecA.idx \
+	-o pprecA-2.ind1 -t pprecA-2.ilg \
+	&& diff $srcdir/tests/pprecA-2.ind pprecA-2.ind1 || exit 1
+
+./makeindex -s $srcdir/tests/pprec3.ist $srcdir/tests/pprecB.idx \
+	-o pprecB-3.ind1 -t pprecB-3.ilg \
+	&& diff $srcdir/tests/pprecB-3.ind pprecB-3.ind1 || exit 1
+
+./makeindex -s $srcdir/tests/pprec4.ist $srcdir/tests/pprecB.idx \
+	-o pprecB-4.ind1 -t pprecB-4.ilg \
+	&& diff $srcdir/tests/pprecB-4.ind pprecB-4.ind1 || exit 1
