@@ -1,0 +1,5 @@
+\begin{theindex}
+
+  \item entryA[[delim0]]i[[sfx 3p]], 1[[sfx 3p]], I[[sfx 3p]]
+
+\end{theindex}
